# SmartCalcV1.0

./: smart_calc_controller.c  smart_calc_controller.h
modules/: calculate.c  creditCalc.c  from_infix_to_polish.c  lexems_divider.c
modules/headers/: creditCalc.h  from_infix_to_polish.h  input_validation.h  lexems_divider.h  stack.h
src/: Doxyfile  Makefile
src/modules/: input_validation.c  stack.c
src/modules/headers/: calculate.h  debitCalc.h
src/test_dir/: test.c
src/view/: graphwindow.cpp  mainwindow.cpp
view/: CMakeLists.txt  creditwindow.cpp  creditwindow.h  debitwindow.h  graphwindow.h  mainwindow.h
